syntax = "proto3";

package Greeting;

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse{
	string result = 1;
}


message GreetingManyTimesRequest {
	Greeting greeting = 1;
}

message GreetingManyTimesResponse{
	string result = 1;
}

message LongGreetingRequest {
	Greeting greeting = 1;
}

message LongGreetingResponse{
	string result = 1;
}

message GreetingEveryoneRequest {
	Greeting greeting = 1;
}

message GreetingEveryoneResponse{
	string result = 1;
}

service GreetingService {
	//UNARY
	rpc Greet (GreetingRequest) returns (GreetingResponse){}
	//SERVER STREAMING
	rpc GreetManyTimes (GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse){}

	//CLIENT STREAMING
	rpc LongGreet (stream LongGreetingRequest) returns (LongGreetingResponse){}

	//BIDIRECTIONAL STREAMING
	rpc GreetEveryone (stream GreetingEveryoneRequest) returns (stream GreetingEveryoneResponse){}
}